--- a/src/components/WorkPlaceComponents/TableIcon/TableIcon.module.css
+++ b/src/components/WorkPlaceComponents/TableIcon/TableIcon.module.css
@@ -1,8 +1,29 @@
 .progIcon{
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
     margin: auto;
-    background-color: whitesmoke;
     position: absolute;
     z-index: 1;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+.progIcon > img{
+    display: block;
+    margin: 0 auto;
+}
+
+.progIcon > p{
+    font-size: small;
+    color: whitesmoke;
+    width: fit-content;
+    text-align: center;
+    margin: 0 auto;
+    text-shadow: black 0 0 4px;
+}
+
+.progIcon:hover{
+    height: fit-content;
+    background-color: rgba(125, 125, 255, .2);
+    border: 1px rgba(125, 125, 255, 1) solid
 }
